# xhs

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  api.md  docker-compose.yml
.cursor/rules/: claude-spec.mdc
.cursor/skills/backend-agent/: SKILL.md
.cursor/skills/backend-api/: SKILL.md
.cursor/skills/backend-db/: SKILL.md
.cursor/skills/backend-email/: SKILL.md
.cursor/skills/backend-models/: SKILL.md
.cursor/skills/backend-tools/: SKILL.md
.cursor/skills/overview/: SKILL.md
backend/: .env.example  .gitignore  agent.py  database.py  email_service.py  main.py  models.py  pyproject.toml  scheduler.py  tools.py
docker/: docker-compose.yml  env.example
docker/init/: 01_schema.sql  02_data.sql
docs/: 项目介绍文档.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: style.css
frontend/src/components/: ChatInput.vue  ChatMessages.vue  EmailSettings.vue  Sidebar.vue
